fix toc overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12396,6 +12396,8 @@ tab-container .btn-white-outline-mktg-fluid {
     color: #79b8ff;
     font-size: 16px;
     margin: 10px 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .DocsNav .main-page {
